--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,47 @@
+name: freegamescheckerdeployer
 services:
   free-games-checker:
     build:
-      context: .
+      context: /var/lib/jenkins/workspace/Free Games Checker Deployer
       dockerfile: Dockerfile
+    cpu_shares: 50
     command:
       - python
       - main.py
+    container_name: free-games-checker
+    deploy:
+      resources:
+        limits:
+          memory: 3792M
     environment:
       - DISCORD_WEBHOOK_URL=${DISCORD_WEBHOOK_URL} 
     image: apollox10/free-games-checker:latest
     restart: unless-stopped
-    container_name: "free-games-checker"
+    volumes:
+      - type: bind
+        source: /DATA/Documents/Discord Projects/Free Games Checker/data
+        target: /mnt/data
+      - type: bind
+        source: /DATA/Documents/Discord Projects//DATA/Documents/Discord Projects/Free
+          Games Checker/logs
+        target: /mnt/logs
+    ports: []
+    devices: []
+    cap_add: []
+    networks:
+      - default
+    privileged: false
+networks:
+  default:
+    name: freegamescheckerdeployer_default
+x-casaos:
+  author: self
+  category: self
+  hostname: ""
+  icon: ""
+  index: /
+  is_uncontrolled: false
+  port_map: ""
+  scheme: http
+  title:
+    custom: Free Games Checker
