Fix Docker volume path and update Epic Games link to use correct locale

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,8 +22,7 @@ services:
         source: /DATA/Documents/Discord Projects/Free Games Checker/data
         target: /mnt/data
       - type: bind
-        source: /DATA/Documents/Discord Projects//DATA/Documents/Discord Projects/Free
-          Games Checker/logs
+        source: /DATA/Documents/Discord Projects/Free Games Checker/logs
         target: /mnt/logs
     ports: []
     devices: []
