Refactor file paths in configuration and Docker setup; enhance Discord message formatting and logging in notifier and scrapper modules

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,10 +21,10 @@ services:
     volumes:
       - type: bind
         source: /DATA/Documents/Discord Projects/Free Games Checker/data
-        target: /mnt/data
+        target: mnt/data
       - type: bind
         source: /DATA/Documents/Discord Projects/Free Games Checker/logs
-        target: /mnt/logs
+        target: mnt/logs
     ports: []
     devices: []
     cap_add: []
