Make EpicGames API & healthcheck URLs configurable
Read EPIC_GAMES_API_URL from the environment (with existing default) in config.py and update docker-compose.yaml to stop using a hard-coded HEALTHCHECK_URL. The compose file now exposes HEALTHCHECK_URL and EPIC_GAMES_API_URL via environment variables so these endpoints can be overridden via .env or runtime environment, improving configurability across deployments.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,8 @@ services:
           memory: 3792M
     environment:
       - DISCORD_WEBHOOK_URL=${DISCORD_WEBHOOK_URL} 
-      - HEALTHCHECK_URL=http://host.docker.internal:3001/api/push/VKkunqDKq9
+      - HEALTHCHECK_URL=${HEALTHCHECK_URL}
+      - EPIC_GAMES_API_URL=${EPIC_GAMES_API_URL}
     image: apollox10/free-games-checker:latest
     restart: unless-stopped
     volumes:
