--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
-name: freegamescheckerdeployer
+name: freegamesnotifierdeployer
 services:
-  free-games-checker:
+  free-games-notifier:
     build:
       context: ${BUILD_PATH}
       dockerfile: Dockerfile
@@ -8,7 +8,7 @@ services:
     command:
       - python
       - main.py
-    container_name: free-games-checker
+    container_name: free-games-notifier
     deploy:
       resources:
         limits:
@@ -17,7 +17,7 @@ services:
       - DISCORD_WEBHOOK_URL=${DISCORD_WEBHOOK_URL} 
       - HEALTHCHECK_URL=${HEALTHCHECK_URL}
       - EPIC_GAMES_API_URL=${EPIC_GAMES_API_URL}
-    image: apollox10/free-games-checker:latest
+    image: apollox10/free-games-notifier:latest
     restart: unless-stopped
     volumes:
       - type: bind
@@ -36,7 +36,7 @@ services:
       - "host.docker.internal:host-gateway"
 networks:
   default:
-    name: freegamescheckerdeployer_default
+    name: freegamesnotifierdeployer_default
 x-casaos:
   author: self
   category: self
@@ -47,4 +47,4 @@ x-casaos:
   port_map: ""
   scheme: http
   title:
-    custom: Free Games Checker
+    custom: Free Games Notifier
