--- a/compose.yaml
+++ b/compose.yaml
@@ -15,5 +15,7 @@ services:
       - type: bind
         source: ${LOGS_PATH}
         target: /mnt/logs
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - default
