Make healthcheck optional via ENABLE_HEALTHCHECK
Expose ENABLE_HEALTHCHECK in compose.yaml and read it in config.py. Add ENABLE_HEALTHCHECK config flag (from env) and update modules/healthcheck.py to skip sending the heartbeat when the flag is false, logging a debug message when skipped. This allows disabling the external healthcheck monitor per-deployment without removing the HEALTHCHECK_URL.

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,7 @@ services:
     environment:
       - DISCORD_WEBHOOK_URL=${DISCORD_WEBHOOK_URL} 
       - HEALTHCHECK_URL=${HEALTHCHECK_URL}
+      - ENABLE_HEALTHCHECK=${ENABLE_HEALTHCHECK}
       - EPIC_GAMES_API_URL=${EPIC_GAMES_API_URL}
     image: free-games-notifier
     restart: unless-stopped
